// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformMarkdownWithSolid > honors disabled built-in embeds from framework options 1`] = `
"
export const frontmatter = {};

const rawHtml = "<p><GitHub repo=\\"ubugeeei-prod/ox-content\\"></GitHub></p>\\n";

export default function MarkdownContent() {
  return <div class="ox-content" innerHTML={rawHtml} />;
}
"
`;

exports[`transformMarkdownWithSolid > turns registered components into islands and leaves fenced tags literal 1`] = `
"
import { onCleanup, onMount } from 'solid-js';
import { render } from 'solid-js/web';
import { initIslands, readIslandSlotHtml } from '@ox-content/islands';
import Alert from '../src/components/Alert.tsx';

export const frontmatter = {"title":"Solid Guide","draft":false};

const rawHtml = "<h1 id=\\"solid-guide\\">Solid Guide</h1>\\n<div data-ox-island=\\"Alert\\" data-ox-props='{\\"tone\\":\\"info\\",\\"active\\":true}' data-ox-content='Read **docs**.'></div>\\n<pre><code class=\\"language-tsx\\">&lt;Alert tone=&quot;code&quot; /&gt;\\n</code></pre>\\n";
const components = {
  Alert,
};

function createSolidHydrate() {
  return (element, props) => {
    const componentName = element.dataset.oxIsland;
    const Component = components[componentName];
    if (!Component) return;

    // Read the slot content before clearing: the island element still holds the
    // markup the Markdown transform left behind.
    const islandContent = readIslandSlotHtml(element);
    element.innerHTML = '';

    const dispose = render(
      () =>
        islandContent
          ? <Component {...props}><div innerHTML={islandContent} /></Component>
          : <Component {...props} />,
      element,
    );

    return () => dispose();
  };
}

export default function MarkdownContent() {
  let container;

  onMount(() => {
    if (!container) return;
    const controller = initIslands(createSolidHydrate(), {
      selector: '.ox-content [data-ox-island]',
    });
    onCleanup(() => controller.destroy());
  });

  return <div class="ox-content" ref={container} innerHTML={rawHtml} />;
}
"
`;

exports[`transformMarkdownWithSolid > uses the static html path when no registered component is present 1`] = `
"
export const frontmatter = {};

const rawHtml = "<h1 id=\\"plain\\">Plain</h1>\\n<Unknown />\\n";

export default function MarkdownContent() {
  return <div class="ox-content" innerHTML={rawHtml} />;
}
"
`;
